# cv_creator_agent

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  struct_creator.sh
.github/workflows/: ci.yaml  master.yaml
src/: graph.py  models.py  state.py  utils.py
src/agents/: analyst.py  experience.py  projects.py  prompts.py  summary.py
src/agents/prompts/: analyst.toml  experience.toml  summary.toml
tests/: __init__.py  api_tester.py  node_cases.py  test_analyst.py  test_experience.py  test_graph_smoke.py  test_nodes_contract.py  test_nodes_llm.py  test_summary.py  test_template_loader.py  test_with_llm.py
tests/fixtures/: dummy_jd  public_cv.json
tests/helpers/: fakes.py  state_factory.py  utils.py
