[project]
name = "cv-creator-agent"
version = "0.1.0"
description = "A multi agent system that takes job description and user work and creates a tailored CV, using LangGraph, streamlit and LLMs (obviously)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grandalf>=0.8",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.0.0",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.4",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.8",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]

testpaths = ["tests"]

markers = [
  "llm: tests that call real LLMs",
  "smoke: testing graph expected output with fake llm",
  "node: testing nodes independently"
]

